--- a/docs/bookdown-testing-modified.asciidoc
+++ b/docs/bookdown-testing-modified.asciidoc
@@ -1,7 +1,7 @@
 Preface
 -------
 
-This test book was last updated on 18 May 2020
+This test book was last updated on 19 May 2020
 
 Insert additional preface items below (acknowledgements, etc.) to ensure
 that the first chapter is properly numbered as chapter one. If
@@ -11,64 +11,68 @@ fine.
 Reminder: Bookdown does not auto-number figures in the `index.Rmd` file,
 which serves as a ``preface'' file.
 
-Title of Chapter Here
----------------------
-
 Goals
-^^^^^
+-----
 
-The broad goal is to create one efficient workflow for the authors to
-produce three versions of the book: HTML pages; PDF/MS Word; AsciiDoc.
+Our broad goal is to create one efficient workflow to produce three
+versions of the book: HTML pages; PDF/MS Word; AsciiDoc.
 
-1.  Authors will compose chapters and sections of the book manuscript as
-individual R-flavored Markdown files, and use Bookdown to build our
-open-source web edition as a set of static HTML pages, one for each
-chapter and each section. Readers of the web edition prefer shorter web
-pages (one per book section) rather than longer ones (one per book
-chapter).
-2.  Also, authors will set Bookdown to build the book as one PDF file
-and also one MS Word file, to allow the editor to easily comment on the
-manuscript.
-3.  Also, authors have the option to set Bookdown to build the book as
-one large Markdown file, and use https://pandoc.org/try/[Pandoc] to
-convert it into one large AsciiDoc file, to enable easier importing into
-the https://docs.atlas.oreilly.com/writing_in_asciidoc.html[O’Reilly
-Atlas platform].
-
-Structure of the book files
-^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-We have organized our http://github.com/handsondataviz/book[book
-repository] as a set of individual files for each chapter and each
-section. Chapter files are named 01-topic, 02-topic, etc., and section
-files are named 01.1-subtopic, 01.2-subtopic, etc. As co-authors, this
-structure gives us maximum flexibility as we create different pieces of
-the book, since it allows us to add, remove, and edit different sections
-of the same chapter at the same time.
-
-Reminder: Our preferred file structure (multiple section files for each
-chapter) works in Bookdown but produces this warning message, which we
-ignore:
-`You have 4 Rmd input file(s) but only 3 first-level heading(s). Did you forget first-level headings in certain Rmd files?`
-
-* should we keep `number_sections: true` and use `{-}` after 3-hashtag
-headers to avoid numbering those, or set to false and insert all numbers
-manually?
-* keep `chapter_name: "Chapter "` – or make blank and insert manually?
+1.  As co-authors, we compose the book manuscript as individual
+R-flavored Markdown files (.Rmd), and use Bookdown to build as a set of
+HTML pages. We upload the files to our
+https://github.com/handsondataviz[GitHub repository] and publish
+open-access web edition at https://HandsOnDataViz.
+2.  We also use Bookdown to build the book as a PDF file and as a MS
+Word file, and upload these to the `docs` folder of our GitHub
+repository, which our editor may download to comment on the manuscript
+as we revise.
+3.  We also have the option to use Bookdown to build one large Markdown
+file (.md), and use https://pandoc.org/try/[Pandoc] to convert it into
+one large AsciiDoc file (.asciidoc), for easier importing into the
+https://docs.atlas.oreilly.com/writing_in_asciidoc.html[O’Reilly Atlas
+platform] if desired.
 
 Style Guide
 ~~~~~~~~~~~
 
-Header list (always insert blank line unless directly after hashtag
-header)
+File organization
+^^^^^^^^^^^^^^^^^
+
+We organized our http://github.com/handsondataviz/book[book repository]
+as a set of individual .Rmd files, one for each chapter and each
+section. Chapter files are named 01-topic, 02-topic, etc., and section
+files are named 01.1-subtopic, 01.2-subtopic, etc. The non-numbered
+portion of the file name also serves as the unique name in the
+chapter/section header: `{#unique-name}`. This file structure gives us
+co-authors maximum flexibility to add and edit different sections of the
+book at the same time.
+
+Our current Bookdown `index.Rmd` settings auto-number each chapter and
+section in the table of contents. Alternatively, we could set
+auto-numbering to false, and manually number of title of each chapter
+only.
+
+....
+output:
+  bookdown::gitbook:
+    dev: svglite
+    css: css/style.css
+    toc_depth: 2
+    split_by: section
+    number_sections: true
+    split_bib: true
+....
+
+Headers
+^^^^^^^
 
 * top-level chapter title (A) = 1 hashtag followed by `{#unique-name}`
 * second-level section title (B) = 2 hashtags followed by
 `{#unique-name}`
 * third-level header (C) = 3 hashtags followed by `{-}` to avoid
-numbering
+auto-number
 * fourth-level header (D) = 4 hashtags followed by `{-}` to avoid
-numbering
+auto-number
 
 Each paragraph begins on a separate line. O’Reilly style guide prefers
 _italics_ rather than bold. Use single back tics to display a monospaced
@@ -79,6 +83,15 @@ appears as a colored clickable link in HTML and Word editions, and a
 non-colored but clickable link in the PDF edition. According to O’Reilly
 Atlas documentation, the AsciiDoc version should automatically unfurl
 for the printed edition.
+
+Lists: always insert a blank line before items, unless directly after
+hashtag header.
+
+* unordered
+* list
+
+1.  ordered
+2.  list
 
 Insert three back tics to insert a code block. Check character line
 length limits in
@@ -93,28 +106,27 @@ style guide]:
 Cross-references
 ^^^^^^^^^^^^^^^^
 
-The cross-reference strategies below require unique names to be assigned
-to each chapter, section, figure, and table.
+For Bookdown cross-references, assign a unique name to each chapter,
+section, figure, and table. Make sure the unique name (aka R code-chunk
+label) only contains _alphanumeric_ characters (a-z, A-Z, 0-9), slashes
+(/), or dashes (-).
 
-* All cross-refs are clickable and auto-numbered (except chapter) in
-HTML.
-* All (except chapter) are clickable and auto-numbered in PDF.
-* All are auto-numbered (except chapter) in Word, but none are
-clickable.
+* In HTML, all cross-refs are clickable and auto-numbered (except to
+chapter).
+* In PDF, all cross-refs (except chapter) are clickable and
+auto-numbered.
+* In Word, all cross-refs are auto-numbered (except chapter), but none
+are clickable.
 * TBA with AsciiDoc.
 
 Demos:
 
-* To another _chapter_ with HTML link: See link:chapter2.html[chapter
+* To another _chapter_, use HTML link: See link:chapter2.html[chapter
 2].
-* To another _section_ with Bookdown ID ref: See section 1.1.
-* To figure in any chapter/section with Bookdown ID ref: Figure 2, or
+* To another _section_, use Bookdown ID ref: See section 1.1.
+* To figure in any chapter/section, use Bookdown ID ref: Figure 2, or
 Figure 3.
-* To table in any chapter/section with Bookdown ID ref: Table 1.
-
-Bookdown: If you want to cross-reference figures or tables generated
-from a code chunk, please make sure the chunk label only contains
-_alphanumeric_ characters (a-z, A-Z, 0-9), slashes (/), or dashes (-).
+* To table in any chapter/section, use Bookdown ID ref: Table 1.
 
 http://oreillymedia.github.io/production-resources/styleguide/#considering_electronic_formats[O’Reilly
 Style Guide]: Using live cross references (e.g., ``see Figure 2-1'') is
@@ -129,8 +141,9 @@ Conditional Formatting
 Conditional formatting offers the option to display text or images in
 some editions, but not other editions.
 
-Demo: Simple HTML code comment in .Rmd file (does _not_ appear in MS
-Word or PDF or AsciiDoc):
+Demo: Simple HTML code comment in .Rmd file (appears as commented-out
+text in HTML and .md, but does _not_ appear in any way in PDF or MS Word
+or AsciiDoc):
 
 The R package function `is_[html/latex]_output` allows authors to
 produce conditional output for different book products, such as text
@@ -220,51 +233,22 @@ repo for potential later use.
 Add the Markdown table code shown below to auto-number (Table x) in
 HTML, PDF, Word.
 
-Table 1: Left-justify content, remember blank Line
+.(#tab:unique1) Left-justify content, remember blank Line
+[cols="<,<,<",options="header",]
+|================================================================
+|Much Much Longer Header |Short Header |Short Header
+|Left-justify text content with left-colons |Less |Here
+|Use more hyphens to grant more space to some columns |Less |Here
+|================================================================
 
-Much Much Longer Header
-
-Short Header
-
-Short Header
-
-Left-justify text content with left-colons
-
-Less
-
-Here
-
-Use more hyphens to grant more space to some columns
-
-Less
-
-Here
-
-Table 2: Right-justify content, remember blank line
-
-Header1
-
-Header2
-
-Header3
-
-123
-
-456
-
-789
-
-Right-justify
-
-numerical content
-
-with right-colons
-
-Use equal hyphens
-
-to make equal space
-
-for all columns
+.(#tab:unique2) Right-justify content, remember blank line
+[cols=">,>,>",options="header",]
+|=======================================================
+|Header1 |Header2 |Header3
+|123 |456 |789
+|Right-justify |numerical content |with right-colons
+|Use equal hyphens |to make equal space |for all columns
+|=======================================================
 
 Workaround: Currently, our attempt to use Pandoc to directly convert a
 Bookdown-generated Markdown file to AsciiDoc fails because Bookdown
@@ -288,7 +272,7 @@ Pandoc Conversion
 folder, suffix .md)
 * Use command line to navigate to subfolder with `pwd` and `cd`.
 * Convert with:
-`pandoc bookdown-testing.md --from markdown --to asciidoc --standalone --output bookdown-testing.asciidoc`
+`pandoc bookdown-testing-modified.md --from markdown --to asciidoc --standalone --output bookdown-testing-modified.asciidoc`
 * Confirm if AsciiDoc file matches
 https://docs.atlas.oreilly.com/writing_in_asciidoc.html[O’Reilly Atlas
 import style].
