--- a/01-chapter.Rmd
+++ b/01-chapter.Rmd
@@ -144,21 +144,33 @@ Cross-reference interactivity varies by output:
 
 When writing cross-references in the text, the [O'Reilly Style Guide](http://oreillymedia.github.io/production-resources/styleguide/#considering_electronic_formats) prefers live cross references (e.g., "see Figure 2-1"), but if not feasible, use "preceding" or "following" because physical placement of elements may vary across print and digital formats. *Avoid* using "above" or "below."
 
-### Images {-}
-Create high-resolution color images that will appear in grayscale in print book. Organize static .jpg and .png files, and animated .gif files, into the `images` subfolder by chapter. Write file names in lowercase with dashes (not spaces) and begin with keyword of relevant section to keep related images grouped together. Despite being in separate folders, avoid duplicate image file names across the book. Avoid numbering images since they may not match the final sequence. When appropriate, make two image versions (with and without additional text or art) and add "raw" to the latter file name. Examples:
+## Images {- #images}
+Create high-resolution color images that will appear in grayscale in print book. Organize static .jpg and .png files, and animated .gif files, into the `images` subfolder by chapter. Write file names in lowercase with dashes (not spaces) and begin with keyword of relevant section to keep related images grouped together. Despite being in separate folders, avoid duplicate image file names across the book. Avoid numbering images since they may not match the final sequence. When appropriate, make two image versions (with and without additional text or art) and add "raw" to the latter file name.
+
+For larger .jpg or .png images (taller than 400px?), use a photo-editing tool (*not Preview*) to create a .pdf version with smaller dimensions but resampled at a higher resolution, and save with same name in the same folder. We inserted global R code-chunk settings immediately after the first header in the `index.Rmd` file, to display each code-chunk image without a code echo, and to automatically substitute PDF images over PNG/JPG with the same file name, when available, *for the PDF book output only*, to improve its general appearance for the editing process:
 
 ```
-images/05-chart/design-no-junk.png
-images/05-chart/design-no-junk-raw.png
+{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+options(knitr.graphics.auto_pdf = TRUE)
+```
+
+Sample set of file names for JPG, smaller high-res PDF, and JPG without text or art:
+
+```
+images/05-chart/design-no-junk.jpg
+images/05-chart/design-no-junk.pdf
+images/05-chart/design-no-junk-raw.jpg
 ```
 
 In this book, only use Markdown formatting for images that appear inside tables and do *not* require captions or figure numbering, and leave the caption field blank:
 
 | Co-Authors      | About Us      |
 | --------------- | ------------- |
-| ![](images/dougherty-jack.jpg) | [Jack Dougherty](http://jackdougherty.org) |
-| ![](images/ilyankou-ilya.jpg) | [Ilya Ilyankou](https://github.com/ilyankou) |   
+| ![](images/dougherty-jack.jpg) | See [Jack Dougherty](http://jackdougherty.org) |
+| ![](images/ilyankou-ilya.jpg) | See [Ilya Ilyankou](https://github.com/ilyankou) |   
 
+TODO: Fix resolution of images above. Maybe use conditional formatting, or add higher-resolution images under different file name for substitution by publisher?
 
 Although Markdown formatting offers a simple syntax that easily converts into other formats with Bookdown/Pandoc, there is no auto-numbering in the HTML edition, while auto-numbering appears in the PDF edition, and numbered figures are required by the publisher. Furthermore, Markdown formatting does not allow conditional output.
 
@@ -176,7 +188,7 @@ ref:design-no-junk
 images/05-chart/design-no-junk.png
 ```
 
-#### Demo: R code-chunk for static image {-}
+### Demo: R code-chunk for static image {-}
 ...as shown in Figure \@ref(fig:tiger).
 
 (ref:tiger) Caption here. Markdown embedded links are acceptable.
@@ -187,7 +199,7 @@ images/05-chart/design-no-junk.png
 
 R code-chunks allow more complex conditional formatting, where an interactive map or animated GIF or YouTube video clip appears in the web version, and a static image with an embedded link appears in the PDF and MS Word outputs. Also note the option to change the default iframe height (400px) and width with settings in the `custom-scripts.html` file, with a code comment reminder.
 
-#### Demo: R code-chunk for HTML iframe and static image {-}
+### Demo: R code-chunk for HTML iframe and static image {-}
 ...as shown in Figure \@ref(fig:sample-map).
 
 (ref:sample-map) Caption here, and add embedded link to explore the [full-screen interactive map](https://handsondataviz.github.io/leaflet-maps-with-google-sheets/).
@@ -197,7 +209,7 @@ R code-chunks allow more complex conditional formatting, where an interactive ma
 if(knitr::is_html_output()) knitr::include_url("https://handsondataviz.github.io/leaflet-maps-with-google-sheets/") else knitr::include_graphics("images/sample-map.jpg")
 ```
 
-#### Demo: R code-chunk for GIF animation and static image {-}
+### Demo: R code-chunk for GIF animation and static image {-}
 ...as shown in Figure \@ref(fig:excel-drag).
 
 (ref:excel-drag) Caption here, with embedded link to [animated GIF](https://handsondataviz.org/images/02-spreadsheet/excel-drag-consec.gif).
@@ -207,21 +219,8 @@ if(knitr::is_html_output()) knitr::include_url("https://handsondataviz.github.io
 if(knitr::is_html_output()) knitr::include_url("https://handsondataviz.org/images/02-spreadsheet/excel-drag-consec.gif") else knitr::include_graphics("images/excel-drag.png")
 ```
 
+TODO: Decide and add conditional formatting for YouTube video
 
-TODO: Test conditional formatting with GIF in HTML and static image elsewhere.
-
-TODO: Decide conditional formatting for YouTube video
-
-TODO: Test output size across editions
-
-TODO: Test quality of PDF images with adding R global option setting
-
-TODO: Describe R global option settings in `index.Rmd` to display each R code-chunk without a code echo
-
-```
-{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-```
 
 ### Tables {-}
 Create tables in Markdown format, since it produces good output for HTML, PDF, Word, and Markdown. Use a tool such as [Tables Generator](https://www.tablesgenerator.com/markdown_tables) to import significant table data in CSV format, format the column alignment as desired, and press Generate button to create table in Markdown format. For significant table data, save the CSV version in a GitHub repo for potential later use.
