--- a/02-chapter.Rmd
+++ b/02-chapter.Rmd
@@ -4,9 +4,9 @@ Cupcake ipsum dolor sit amet jelly beans wafer pudding. Bear claw lemon drops ca
 ## Section Header {- #section-header}
 Cupcake ipsum dolor sit amet jelly beans wafer pudding. Bear claw lemon drops carrot cake pie wafer chocolate jelly cheesecake. Chocolate cheesecake chocolate bar sugar plum sweet dessert tart. Tootsie roll bear claw chocolate bar wafer powder sugar plum tiramisu bear claw gummies. Tart macaroon pastry lemon drops candy tootsie roll chocolate candy canes lollipop. Pudding fruitcake bear claw sweet cake cupcake. Chupa chups pudding candy canes chupa chups powder jujubes chocolate cake cotton candy jelly.
 
-(ref:tiger2) Caption for sample static image using R code-chunk method. Auto-numbered as Figure x.x in HMTL and PDF, but as Figure x in Word. CHECK OTHERS. Note that image in PDF edition may "float" and appear before or after page, so needs cross-reference.
+(ref:tiger3) Caption for sample static image using R code-chunk method.
 
-```{r tiger2, fig.cap="(ref:tiger2)"}
+```{r tiger3, fig.cap="(ref:tiger3)"}
  knitr::include_graphics("images/tiger.png")
 ```
 
